Fixing some alignment issues when in mobile and adding progress bar

--- a/wwwroot/css/profile.css
+++ b/wwwroot/css/profile.css
@@ -29,12 +29,15 @@ wrapper {
     flex: 1 100%;
 }*/
 
-    wrapper profileinfo,
-    wrapper contactCard,
-    wrapper profileinfo charinfo {
-        border: 1px solid #dee2e6;
-    }
+wrapper profileinfo,
+wrapper contactCard,
+wrapper profileinfo charinfo {
+    border: 1px solid #dee2e6;
+}
 
+wrapper profileinfo{
+    flex:1 auto;
+}
 charinfo {
     display: flex;
     flex-flow: row wrap;
@@ -132,11 +135,12 @@ li p{
     padding:0;
 }
 charimg{
-    max-width:32em;
+    /*max-width:32em;*/
     max-height:100%;
     display:flex;
     flex-flow:column nowrap;
     justify-content:flex-end;
+    flex:1 auto;
 }
 
 charimg img-frame{
@@ -147,6 +151,8 @@ charimg img-frame{
 img-frame img{
     width:100%;
     height:100%;
+    max-width:35em;
+    max-height:25em;
 }
 
 charhealth{
@@ -183,6 +189,12 @@ charhealth charhealthbox hpbox,
 charhealth charmpbox mpbox {
     display: flex;
     flex-flow: column nowrap;
+    width:100%;
+}
+
+hpbox hp,
+mpbox mp{
+    align-self:center;
 }
 
 experiance {
@@ -206,13 +218,20 @@ experiance experiance-bar {
     transition: width .6s ease;
 }
 
+experiance[thin] {
+    max-height:2px;
+}
+
 experiance-bar[green] {
     background-color: #28a745;
 }
-
+experiance-bar[blue] {
+    background-color: #007bff;
+}
 box1{
-    height:100%;
+    height:93%;
     display:flex;
+    justify-content:center;
     /*align-items:center;*/
 }
 
